[package]
name = "memoryrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.9.2"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Data_Xml_Dom",
		"Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
		"Win32_System_Threading",
		"Win32_System_Diagnostics_Debug"
]