[package]
name = "memoryrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winsafe = { version = "0.0.12", features = ["kernel"] }
custom_error = "1.9.2"
num = "0.4.0"
paste = "1.0.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.1.4", features = ["derive"] }

[dependencies.windows]
version = "0.44.0"
features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"]
